--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <form id="form">
             <input type="name" id="artist-form" placeholder="Artist" class="rounded text-center pt-2 pb-2">
             <input type="name" id="song-form" placeholder="Song" class="rounded text-center pt-2 pb-2 mt-2">
-            <input id="submit" onsubmit="prevent()" type="submit" class="mt-2 pt-2 pb-2 pl-4 pr-4 bg-blue-500 text-white rounded outline-none cursor-pointer w-40 block m-auto">
+            <input id="submit" type="submit" class="mt-2 pt-2 pb-2 pl-4 pr-4 bg-blue-500 text-white rounded outline-none cursor-pointer w-40 block m-auto">
         </form>
 
         <div id="lyrics"></div>
